Noteworthy changes for version 0.9.9 (2006-04-24)
=================================================

* Mainly cosmetic changes.


Noteworthy changes for version 0.9.8 (2006-03-28)
=================================================

* PGP/MIME signature verification may now work in some cases.

* New option to prefer displaying of the HTML part.


Noteworthy changes for version 0.9.7 (2006-03-21)
=================================================

* Minor changes

Noteworthy changes for version 0.9.6 (2006-01-26)
=================================================

* Cosmetic fixes.


Noteworthy changes for version 0.9.5 (2005-12-07)
=================================================

* Fixed problems related to use on non-admin accounts.

* Print a warning if used with OL prior to OL2003 SP2.


Noteworthy changes for version 0.9.4 (2005-12-06)
=================================================

* Added translation framework.  Provided German translation.

* New option to enable automatic decryption in the preview window.

* Removed deprecated options to configure gpg path and homedir.

* Default key from the option dialog works.

* Support for HTML mails.


Noteworthy changes for version 0.9.3 (2005-09-29)
=================================================

* Fixed bugs introduced with the last release.

* PGP/MIME decryption works now correctly with Latin-1 and utf-8.

* No more pop-ups to ask whether to save changes after just decrypting
  a message.

* Fixed a couple of bugs possibly leading to crashes.


Noteworthy changes for version 0.9.2 (2005-09-22)
=================================================

* Saving attachments from PGP/MIME encrypted messages works.


Noteworthy changes for version 0.9.1 (2005-09-19)
=================================================

* Bug fixes


Noteworthy changes for version 0.9.0 (2005-09-04)
=================================================

* Major rewrite. Renamed the package to GPGol.  Note, that there used