@@ -18,14 +18,15 @@ min_automake_version="1.9.4"
 # "svn up" and "autogen.sh" right before creating a distribution.
 m4_define([my_version], [0.9.9])
 m4_define([my_issvn], [no])
-NEED_GPGME_API=1
-NEED_GPGME_VERSION=1.1.0
-
 
 m4_define([svn_revision], m4_esyscmd([echo -n $((svn info 2>/dev/null \
             || echo 'Revision: 0')|sed -n '/^Revision:/ {s/[^0-9]//gp;q}')]))
 AC_INIT([gpgol], my_version[]m4_if(my_issvn,[yes],[-svn[]svn_revision]),
         [bug-gpgol@g10code.com])
+
+NEED_GPGME_API=1
+NEED_GPGME_VERSION=1.1.0
+
 
 SVN_REVISION=svn_revision
 PACKAGE=$PACKAGE_NAME
